--- a/src/app/component/landing-pages/start-page.component.html
+++ b/src/app/component/landing-pages/start-page.component.html
@@ -27,7 +27,7 @@
   </div>
 
   <div class="container pt-3 pb-3">
-    <div class="col-12 startPage__disclaimer">
+    <div class="col-12 fst-italic startPage__disclaimer">
       {{ 'PROVISION_DISCLAIMER' | translate }}
     </div>
 
