--- a/src/app/component/landing-pages/moderated-teaser.component.html
+++ b/src/app/component/landing-pages/moderated-teaser.component.html
@@ -1,6 +1,6 @@
-<section #teaserSection class="informationItems__containerWrapper{{headerTitle ? ' informationItems__containerWrapper--topGap' : ''}}">
+<section #teaserSection class="informationItems__containerWrapper{{headerTitle ? ' pt-3' : ''}}">
   <a href="{{linkUri}}">
-    <div class="col-12 header header__title" *ngIf="headerTitle">
+    <div class="col-12 w-100 header header__title" *ngIf="headerTitle">
       {{headerTitle | translate}} <span class="header__more">mehr &raquo;</span>
     </div>
   </a>
