- added stage "todays deals for you" on startpage

--- a/src/app/component/landing-pages/moderated-teaser.component.html
+++ b/src/app/component/landing-pages/moderated-teaser.component.html
@@ -1,7 +1,7 @@
 <section #teaserSection class="informationItems__containerWrapper{{headerTitle ? ' pt-3' : ''}}">
   <a href="{{linkUri}}">
     <div class="col-12 w-100 header header__title" *ngIf="headerTitle">
-      {{headerTitle | translate}} <span class="header__more">mehr &raquo;</span>
+      {{headerTitle | translate}} <span *ngIf="linkUri" class="header__more">mehr &raquo;</span>
     </div>
   </a>
   <div class="col-12 informationItems__container">
