--- a/src/app/component/landing-pages/start-page.component.html
+++ b/src/app/component/landing-pages/start-page.component.html
@@ -22,6 +22,7 @@
       [navigationId]="teaserItem.navigationId"
       [searchPattern]="teaserItem.searchPattern"
       [ssrRendering]="teaserItem.ssrRendering"
+      [createdToday]="teaserItem.createdToday"
     >
     </moderated-teaser>
   </div>
