--- a/src/app/component/loading/loading.component.html
+++ b/src/app/component/loading/loading.component.html
@@ -1,7 +1,7 @@
-<div class="loading__container">
-  <div class="loading__circle loading__circle-1"></div>
-  <div class="loading__circle loading__circle-2"></div>
-  <div class="loading__circle loading__circle-3"></div>
-  <div class="loading__circle loading__circle-4"></div>
-  <div class="loading__circle loading__circle-5"></div>
+<div class="d-flex justify-content-center align-items-center loading__container">
+  <div class="d-flex justify-content-center align-items-center loading__circle loading__circle-1"></div>
+  <div class="d-flex justify-content-center align-items-center loading__circle loading__circle-2"></div>
+  <div class="d-flex justify-content-center align-items-center loading__circle loading__circle-3"></div>
+  <div class="d-flex justify-content-center align-items-center loading__circle loading__circle-4"></div>
+  <div class="d-flex justify-content-center align-items-center loading__circle loading__circle-5"></div>
 </div>
