--- a/src/app/component/landing-pages/start-page.component.html
+++ b/src/app/component/landing-pages/start-page.component.html
@@ -1,7 +1,7 @@
 <div class="startPage__content">
   <a href="{{currentHero?.heroUrl}}">
     <div
-      class="startPage__hero"
+      class="w-100 position-absolute startPage__hero"
       [style.background-image]="currentHero?.backgroundImage"
       [style.background-position-x]="currentHero?.backgroundPositionX"
       [style.background-position-y]="currentHero?.backgroundPositionY"
