--- a/src/app/component/item/item.component.html
+++ b/src/app/component/item/item.component.html
@@ -1,7 +1,7 @@
 <div #itemSection>
   <div *ngIf="item" [ngClass]="['m-2', 'informationItem', item.itemId ? '' : 'informationItem--loading', showBig ? 'informationItem--big' : '', cssModifier ? 'informationItem' + cssModifier : '', additionalCssClasses]">
     <div [ngClass]="['d-flex justify-content-center position-relative p-2 informationItem__imageContainer', cssModifier ? 'informationItem__imageContainer' + cssModifier : '', item.itemId ? '' : 'informationItem__imageContainer--loading']">
-      <a href="{{itemUrl}}" class="informationItem--link" (click)="pickedInformation(item)" target="{{linkTarget}}">
+      <a href="{{itemUrl}}" class="informationItem--link" (click)="pickedInformation(item, itemUrl, $event)" target="{{linkTarget}}">
         <img *ngIf="item.itemId"
              class="informationItem__image{{showBig ? ' informationItem__image--big' : ''}}{{cssModifier ? ' informationItem__image' + cssModifier : ''}}"
              alt="{{'IMAGE_OF' | translate }} {{item.title}}"
@@ -15,7 +15,7 @@
       <app-add-to-wishlist [item]="item" *ngIf="showWishlistIcon"></app-add-to-wishlist>
     </div>
 
-    <a href="{{itemUrl}}" class="informationItem--link" (click)="pickedInformation(item)" target="{{linkTarget}}" >
+    <a href="{{itemUrl}}" class="informationItem--link" (click)="pickedInformation(item, itemUrl, $event)" target="{{linkTarget}}" >
       <div class="mt-1 informationItem__contentContainer{{cssModifier ? ' informationItem__contentContainer' + cssModifier : ''}}">
         <div *ngIf="showPrice">
           <div *ngIf="renderLowestPrice(item); else noPrice" [ngClass]="['button', 'fw-bold', 'justify-content-center', 'mb-3', 'informationItem__priceWrapper']">
@@ -38,13 +38,13 @@
       </div>
     </div>
 
-    <a href="{{itemUrl}}" class="informationItem--link" *ngIf="showOfferDetailsLink" (click)="pickedInformation(item)" target="{{linkTarget}}">
+    <a href="{{itemUrl}}" class="informationItem--link" *ngIf="showOfferDetailsLink" (click)="pickedInformation(item, itemUrl, $event)" target="{{linkTarget}}">
       <span>{{getShopNameOfItem()}}</span>
     </a>
-    <a href="{{singleProductViewUrl}}" class="mb-1 d-block informationItem__details--link" *ngIf="showOfferDetailsLink" (click)="pickedInformation(item)">
+    <a href="{{singleProductViewUrl}}" class="mb-1 d-block informationItem__details--link" *ngIf="showOfferDetailsLink" (click)="pickedInformation(item, singleProductViewUrl, $event)">
       <div>{{ 'OFFER_DETAILS' | translate }}</div>
     </a>
-    <a href="{{itemUrl}}" class="informationItem--link" (click)="pickedInformation(item)" target="{{linkTarget}}">
+    <a href="{{itemUrl}}" class="informationItem--link" (click)="pickedInformation(item, itemUrl, $event)" target="{{linkTarget}}">
         <div class="informationItem__title{{cssModifier ? ' informationItem__title' + cssModifier : ''}}">{{ itemTitle | translate }}</div>
     </a>
 
@@ -77,7 +77,7 @@
     </div>
 
     <div *ngIf="item" class="d-flex justify-content-center">
-      <a href="{{itemUrl}}" class="button fw-bold justify-content-center mb-2 informationItem__priceWrapper informationItem__price informationItem__discountDialogLink" (click)="pickedInformation(item)" target="{{linkTarget}}">
+      <a href="{{itemUrl}}" class="button fw-bold justify-content-center mb-2 informationItem__priceWrapper informationItem__price informationItem__discountDialogLink" (click)="pickedInformation(item, itemUrl, $event)" target="{{linkTarget}}">
         {{ 'DISCOUNT_GET_IT_NOW' | translate }}
       </a>
     </div>
