- sped up page for non bot users

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -7,7 +7,7 @@
         </div>
 
         <h1 class="header__logo" style="cursor: pointer;">
-          <a href="/">
+          <a href="/" (click)="visitStartPage($event)">
             <span class="fw-bold header__titleCapitalLetter">W</span><span class="header__title">e</span>
             <span class="fw-bold header__titleCapitalLetter">W</span><span class="header__title">anna</span>
 
