--- a/src/app/component/landing-pages/moderated-teaser.component.html
+++ b/src/app/component/landing-pages/moderated-teaser.component.html
@@ -1,5 +1,5 @@
 <section #teaserSection class="informationItems__containerWrapper{{headerTitle ? ' pt-3' : ''}}">
-  <a href="{{linkUri}}">
+  <a href="{{linkUri}}" (click)="navigateToMore($event)">
     <div class="col-12 w-100 header header__title" *ngIf="headerTitle">
       {{headerTitle | translate}} <span *ngIf="linkUri" class="header__more">mehr &raquo;</span>
     </div>
