- user entities in local storage are now synced, when requesting the page - added wishlists overview - specific wishlist can now be selected

--- a/src/app/component/item/item.component.html
+++ b/src/app/component/item/item.component.html
@@ -50,7 +50,7 @@
 
     <a *ngFor="let hashtag of item.hashtags" href="/hashtags/{{hashtag}}" (click)="exploreHashtag(hashtag, $event)">
       <div *ngIf="showHashtags" class="d-inline-flex flex-wrap">
-        <div class="button informationItem__hashtag">
+        <div class="button mt-2 informationItem__hashtag">
             #{{hashtag}}
         </div>
       </div>
