- wishlists can now be retrieved and created - first fine tuning of wishlists design

--- a/src/app/component/wishlist/wishlists.component.scss
+++ b/src/app/component/wishlist/wishlists.component.scss
@@ -4,7 +4,10 @@
 .wishlists {
   &__content {
     color: $content-color;
-    display: flex;
     padding-top: 4.5em;
+  }
+
+  &__new-list {
+    background-color: $container-background-color;
   }
 }
