--- a/src/app/component/wishlist/wishlists.component.html
+++ b/src/app/component/wishlist/wishlists.component.html
@@ -1,5 +1,26 @@
 <div class="container wishlists__content">
-  <div class="row w-100">
+  <div class="row">
+    <div class="col-12 mt-4 mt-xl-3 p-3 wishlists__new-list" [formGroup]="form">
+      <div class="row d-flex">
+        <div class="col-12">
+          <h5 class="text-uppercase">Neue Wunschliste</h5>
+        </div>
+      </div>
+      <div class="row d-flex">
+        <div class="col-12 col-xl-8 d-flex mt-2 mt-xl-0">
+          <input type="text" placeholder="Name der Wunschliste" formControlName="wishlistTitle" />
+        </div>
+        <div class="col-12 col-xl-2 mt-2 mt-xl-0">
+          <a class="button__wrapper" (click)="createWishlist()">
+            <div class="button d-flex w-100 justify-content-center">Wunschliste anlegen</div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <app-loading *ngIf="isLoading"></app-loading>
+  <div *ngIf="!isLoading" class="row w-100">
     <div *ngFor="let wishlist of Wishlists" class="d-flex justify-content-center mt-5 col-md-4 col-12">
       <div class="row">
         <div class="col-12 d-flex justify-content-center"><h4>{{ wishlist.title }}</h4></div>
