--- a/src/app/component/wishlist/wishlist-items.component.html
+++ b/src/app/component/wishlist/wishlist-items.component.html
@@ -3,7 +3,12 @@
     <div class="row d-flex justify-content-center">
       <div class="wishlist__header-container p-4 col-10 col-md-7">
         <h3 *ngIf="WishlistTitle" class="d-flex justify-content-center wishlist__title">{{WishlistTitle}}</h3>
-        <div class="d-flex justify-content-center">{{ WishlistDescription || 'Beschreibe deine Wunschliste näher' }}</div>
+        <div class="d-flex justify-content-center">{{ WishlistDescription || ('WISHLIST_PROVIDE_A_DESCRIPTION' | translate) }}</div>
+        <div class="d-flex justify-content-center">
+          <a class="button__wrapper" (click)="deleteWishlist()">
+            <div class="button d-flex justify-content-center">Wunschliste löschen</div>
+          </a>
+        </div>
       </div>
     </div>
     <div class="row" *ngFor="let item of items">
